# api/docs/swagger.yaml
@@ -1,5 +1,42 @@
 basePath: /api/v1
 definitions:
+  dto.FieldShortInfo:
+    description: Краткая информация о направлении подготовки.
+    properties:
+      code:
+        description: Код направления
+        example: 01.03.01
+        type: string
+      degree:
+        description: Уровень образования
+        example: Бакалавриат
+        type: string
+      field_id:
+        description: ID направления подготовки
+        example: 1
+        type: integer
+      name:
+        description: Название направления
+        example: Математика
+        type: string
+    type: object
+  dto.GroupResponse:
+    description: Группа направлений подготовки с их параметрами.
+    properties:
+      code:
+        description: Код группы
+        example: "01"
+        type: string
+      fields:
+        description: Список направлений в группе
+        items:
+          $ref: '#/definitions/dto.FieldShortInfo'
+        type: array
+      name:
+        description: Название группы
+        example: Математические науки
+        type: string
+    type: object
   dto.OlympiadShortResponse:
     properties:
       level:
@@ -12,7 +49,7 @@ definitions:
         type: boolean
       name:
         description: Название олимпиады
-        example: Олимпиада по математике
+        example: Олимпиада Росатом по математике
         type: string
       olympiad_id:
         description: ID олимпиады
@@ -20,8 +57,36 @@ definitions:
         type: integer
       profile:
         description: Профиль олимпиады
-        example: math
+        example: физика
         type: string
+    type: object
+  dto.UniversityShortResponse:
+    description: Ответ API с краткими сведениями об университете.
+    properties:
+      like:
+        description: Лайкнут ли университет пользователем
+        example: true
+        type: boolean
+      logo:
+        description: URL логотипа
+        example: https://example.com/logo.png
+        type: string
+      name:
+        description: Полное название
+        example: Московский государственный университет
+        type: string
+      region:
+        description: Название региона
+        example: Москва
+        type: string
+      short_name:
+        description: Краткое название
+        example: МГУ
+        type: string
+      university_id:
+        description: ID университета
+        example: 123
+        type: integer
     type: object
   errs.AppError:
     description: Структура ошибки, возвращаемая API в случае неудачного запроса.
@@ -54,6 +119,46 @@ info:
   title: OlympGuide API
   version: "1.0"
 paths:
+  /groups:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает список групп направлений и их направлений с возможностью
+        фильтрации по уровню образования и поиску.
+      parameters:
+      - collectionFormat: csv
+        description: Уровень образования
+        example: Бакалавриат, Магистратура
+        in: query
+        items:
+          type: string
+        name: degree
+        type: array
+      - description: Поиск по названию или коду (например, 'Математика' или '01.03.04')
+        example: Математика
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Список групп и их направлений
+          schema:
+            items:
+              $ref: '#/definitions/dto.GroupResponse'
+            type: array
+        "400":
+          description: Некорректные параметры запроса
+          schema:
+            $ref: '#/definitions/errs.AppError'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/errs.AppError'
+      summary: Получение списка групп направлений подготовки
+      tags:
+      - Groups
   /olympiads:
     get:
       consumes:
@@ -109,4 +214,48 @@ paths:
       summary: Получить список олимпиад
       tags:
       - olympiads
+  /universities:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает список университетов с учетом фильтров поиска и сортировкой
+        по убыванию популярности.
+      parameters:
+      - collectionFormat: multi
+        description: Фильтр по ID регионов
+        in: query
+        items:
+          type: string
+        name: region_id
+        type: array
+      - description: 'Фильтр: только университеты из региона пользователя'
+        example: true
+        in: query
+        name: from_my_region
+        type: boolean
+      - description: Поиск по названию или сокращенному названию
+        example: '"МГУ"'
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Список университетов
+          schema:
+            items:
+              $ref: '#/definitions/dto.UniversityShortResponse'
+            type: array
+        "400":
+          description: Некорректный запрос
+          schema:
+            $ref: '#/definitions/errs.AppError'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/errs.AppError'
+      summary: Получение списка университетов
+      tags:
+      - Университеты
 swagger: "2.0"
